@@ -3,7 +3,7 @@
 	"Version": "v0.1.",
     "Includes" : "IC_About_Component.ahk",
     "Author" : "Antilectual & mikebaldi1980",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_About",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_About",
     "Info" : "This is an addon that provides an about view",
     "Dependencies" : {}
 }
