@@ -3,7 +3,7 @@
 	"Version": "v1.0.",
     "Includes" : "IC_BrivGemFarm_Component.ahk",
     "Author" : "Antilectual",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_BrivGemFarm_Potato",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_BrivGemFarm_Potato",
     "Info" : "This Addon adds sleeps to busy waits in BrivGemFarm_Performance to reduce CPU load. Requires BrivGemFarm_Performance. Cannot be enabled from the Addon interface.",
     "Dependencies" : {}
 }
