@@ -3,7 +3,7 @@
 	"Version": "v1.0.",
     "Includes" : "IC_BrivGemFarm_Stats_Component.ahk",
     "Author" : "Antilectual",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_BrivGemFarm_Stats",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_BrivGemFarm_Stats",
     "Info" : "This Addon adds a stats tab to view live gem farm information.",
     "Dependencies" : []
 }
