@@ -3,7 +3,7 @@
 	"Version": "v0.1.",
     "Includes" : "IC_ChestPurchaser_Component.ahk",
     "Author" : "Antilectual",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_ChestPurchaser",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_ChestPurchaser",
     "Info" : "This Addon allows for purchasing and opening of chests.",
     "Dependencies" : {}
 }
