@@ -3,7 +3,7 @@
 	"Version": "v0.1.",
     "Includes" : "IC_GameLocationSettings_Component.ahk",
     "Author" : "Antiletual",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_GameLocationSettings",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_GameLocationSettings",
     "Info" : "This AddOn will load add a GUI option to BrivGemFarm's settings screen that lets the user set the game's location.",
     "Dependencies" : [
         {
