@@ -3,7 +3,7 @@
 	"Version": "v0.1.",
     "Includes" : "IC_MemoryFunctions_Component.ahk",
     "Author" : "Antilectual & mikebaldi1980",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_MemoryFunctions",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_MemoryFunctions",
     "Info" : "This AddOn displays relevant information from the game. It can be useful for debugging issues in the game. It will update automatically while connected to a BrivGemFarm.",
     "Dependencies" : {}
 }
