@@ -3,7 +3,7 @@
 	"Version": "v0.1.",
     "Includes" : "IC_MemoryFunctionsFullRead_Component.ahk",
     "Author" : "Antilectual",
-    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/IC-Script-Hub-Public/AddOns/IC_MemoryFunctionsFullRead",
+    "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_MemoryFunctionsFullRead",
     "Info" : "This AddOn will attempt to test ALL read/get functions contained in the IC_MemoryFunctions_Class. This only works for functions that have 0-1 parameters and if there is 1 parameter, 1 must be a valid value.",
     "Dependencies" : {}
 }
